--- a/app/(root)/root.module.css
+++ b/app/(root)/root.module.css
@@ -1,370 +1,369 @@
 .root {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  padding-top: 120px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-top: 120px;
 }
 .background {
-  position: absolute;
-  z-index: -1;
+    position: absolute;
+    z-index: -1;
 }
 
 .image1,
 .image2 {
-  width: 100%;
-  height: fit-content;
-  background-size: cover;
-  background-position: center;
-  z-index: -1;
-  background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    z-index: -1;
+    background-repeat: no-repeat;
 }
 
 .image1 {
-  background: url("/background.svg");
-  width: 1457.4438827737138px;
-  min-height: 2900px;
-  position: relative;
-  top: 80px;
-  left: 20px;
-  transform: scale(1.2);
+    background: url("/background.svg");
+    width: 120vw;
+    min-height: 2800px;
+    position: relative;
+    top: -100px;
+    /* left: 160px; */
 }
-
 .image2 {
-  background: url("/background-2.svg");
-  transform: scale(1.2);
-  position: absolute;
-  top: 3200px;
-  min-width: 100vw;
-  min-height: 2000px;
+    background: url("/background-2.svg");
+    position: absolute;
+    top: 2650px;
+    left: 0;
+    width: 100vw;
+    min-width: 100vw;
+    min-height: 1900px;
+    background-repeat: no-repeat;
+    background-size: 100% 97%;
 }
 
 .mainContainer {
-  position: relative;
-  z-index: 1;
+    position: relative;
+    z-index: 1;
 }
 
 .main {
-  display: flex;
-  flex-direction: column;
-  text-align: center;
-  width: 100%;
-  height: 60vh;
-  position: relative;
-  margin: 0;
-  right: 25%;
-  flex-wrap: nowrap;
-  align-content: center;
-  align-items: center;
-  justify-content: center;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    width: 100%;
+    height: 60vh;
+    position: relative;
+    margin: 0;
+    right: 25%;
+    flex-wrap: nowrap;
+    align-content: center;
+    align-items: center;
+    justify-content: center;
 }
 
 .main h1 {
-  font-weight: 700;
-  font-family: var(--Montserrat);
-  color: white;
-  animation: translate 0.5s ease;
-  margin: 1.5rem 0rem;
-  font-size: 64px;
+    font-weight: 700;
+    font-family: var(--Montserrat);
+    color: white;
+    animation: translate 0.5s ease;
+    margin: 1.5rem 0rem;
+    font-size: 64px;
 }
 
 .textWrapper {
-  overflow: hidden;
-  display: inline-block;
+    overflow: hidden;
+    display: inline-block;
 }
 
 .main h1 span {
-  font-family: var(--Montserrat);
-  font-weight: 700;
-  font-size: 64px;
-  line-height: 100%;
-  display: block;
-  width: fit-content;
-  animation: translate 0.75s ease;
-  background: linear-gradient(90deg, #d17ac4 35%, #6298f9 65%);
-  background-clip: text;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
+    font-family: var(--Montserrat);
+    font-weight: 700;
+    font-size: 64px;
+    line-height: 100%;
+    display: block;
+    width: fit-content;
+    animation: translate 0.75s ease;
+    background: linear-gradient(90deg, #d17ac4 35%, #6298f9 65%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 .main p {
-  font-family: Geist;
-  font-weight: 700;
-  color: white;
-  margin: 0px;
-  font-size: 18px;
-  display: block;
-  animation: translate 1s ease;
+    font-family: Geist;
+    font-weight: 700;
+    color: white;
+    margin: 0px;
+    font-size: 18px;
+    display: block;
+    animation: translate 1s ease;
 }
 
 .card {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  margin: 0px auto;
-  line-height: 1.5;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin: 0px auto;
+    line-height: 1.5;
 
-  background: rgba(255, 255, 255, 0.1);
-  text-align: center;
-  max-width: 80%;
-  backdrop-filter: blur(10px);
-  border: 1px solid rgba(255, 255, 255, 0.5);
-  padding: 1.5rem 1rem;
-  border-radius: 50px;
+    background: rgba(255, 255, 255, 0.1);
+    text-align: center;
+    max-width: 80%;
+    backdrop-filter: blur(10px);
+    border: 1px solid rgba(255, 255, 255, 0.5);
+    padding: 1.5rem 1rem;
+    border-radius: 50px;
 }
 
 .card p {
-  color: white;
-  font-size: larger;
+    color: white;
+    font-size: larger;
 }
 
 .card button {
-  color: #a36fc3;
-  background-color: black;
-  font-family: var(--inter);
-  font-optical-sizing: auto;
-  font-size: larger;
-  font-weight: 600;
-  padding: 1.25rem 4.5rem;
-  border: none;
-  border-radius: 50px;
+    color: #a36fc3;
+    background-color: black;
+    font-family: var(--inter);
+    font-optical-sizing: auto;
+    font-size: larger;
+    font-weight: 600;
+    padding: 1.25rem 4.5rem;
+    border: none;
+    border-radius: 50px;
 }
 
 @keyframes translate {
-  from {
-    transform: translateY(100px);
-  }
-  to {
-    transform: translateY(0px);
-  }
+    from {
+        transform: translateY(100px);
+    }
+    to {
+        transform: translateY(0px);
+    }
 }
 
 @media (min-width: 1025px) and (max-width: 1280px) {
-  .background {
-    width: 100%;
-    min-height: 400vh;
-    overflow: hidden;
-    position: absolute;
-  }
+    .background {
+        width: 100%;
+        overflow: hidden;
+        position: absolute;
+    }
 
-  .image1 {
-    width: 160vw;
-    min-height: 240vh;
-    background-position: center top;
-    background-size: 60% auto;
-    top: -20px;
-    left: -30vw;
-    position: relative;
-    transform: rotate(-1deg);
-    background-repeat: no-repeat;
-    opacity: 0.9;
-    overflow: hidden;
-  }
+    .image1 {
+        width: 160vw;
+        min-height: 240vh;
+        background-position: center top;
+        background-size: 60% auto;
+        top: -20px;
+        left: -30vw;
+        position: relative;
+        transform: rotate(-1deg);
+        background-repeat: no-repeat;
+        opacity: 0.9;
+        overflow: hidden;
+    }
 
-  .image2 {
-    width: 140vw;
-    min-height: 200vh;
-    background-position: center top;
-    background-size: 75% auto;
-    background-repeat: no-repeat;
-    top: 230vh;
-    left: -20vw;
-    z-index: -1;
-    opacity: 0.9;
-    position: absolute;
-    transform: rotate(-0.6deg);
-    overflow: hidden;
-  }
+    .image2 {
+        width: 140vw;
+        min-height: 200vh;
+        background-position: center top;
+        background-size: 75% auto;
+        background-repeat: no-repeat;
+        top: 230vh;
+        left: -20vw;
+        z-index: -1;
+        opacity: 0.9;
+        position: absolute;
+        transform: rotate(-0.6deg);
+        overflow: hidden;
+    }
 
-  .main {
-    height: 40vh;
-    right: 0;
-    align-items: center;
-    justify-content: center;
-    margin-top: 2rem;
-    margin-bottom: 5rem;
-  }
+    .main {
+        height: 40vh;
+        right: 0;
+        align-items: center;
+        justify-content: center;
+        margin-top: 2rem;
+        margin-bottom: 5rem;
+    }
 
-  .main h1,
-  .main h1 span {
-    font-size: 3.8rem;
-  }
+    .main h1,
+    .main h1 span {
+        font-size: 3.8rem;
+    }
 
-  .main p {
-    font-size: 1.2rem;
-    margin-top: 0.75rem;
-  }
+    .main p {
+        font-size: 1.2rem;
+        margin-top: 0.75rem;
+    }
 
-  .card {
-    max-width: 85%;
-    padding: 1.25rem 1.5rem;
-    border-radius: 35px;
-  }
+    .card {
+        max-width: 85%;
+        padding: 1.25rem 1.5rem;
+        border-radius: 35px;
+    }
 
-  .card p {
-    font-size: 1rem;
-    line-height: 135%;
-  }
+    .card p {
+        font-size: 1rem;
+        line-height: 135%;
+    }
 
-  .card button {
-    padding: 0.8rem 2.25rem;
-    border-radius: 30px;
-    font-size: 1.05rem;
-  }
+    .card button {
+        padding: 0.8rem 2.25rem;
+        border-radius: 30px;
+        font-size: 1.05rem;
+    }
 }
 
 @media (min-width: 769px) and (max-width: 1024px) {
-  .background {
-    width: 100%;
-    min-height: 300vh;
-    overflow: hidden;
-    position: absolute;
-  }
+    .background {
+        width: 100%;
+        overflow: hidden;
+        position: absolute;
+    }
 
-  .image1 {
-    width: 170vw;
-    min-height: 180vh;
-    background-position: center top;
-    background-size: 70% auto;
-    background-repeat: no-repeat;
-    top: 20px;
-    left: -30vw;
-    position: relative;
-    transform: rotate(-1.8deg);
-    opacity: 0.9;
-  }
+    .image1 {
+        width: 170vw;
+        min-height: 180vh;
+        background-position: center top;
+        background-size: 70% auto;
+        background-repeat: no-repeat;
+        top: 20px;
+        left: -30vw;
+        position: relative;
+        transform: rotate(-1.8deg);
+        opacity: 0.9;
+    }
 
-  .image2 {
-    width: 170vw;
-    min-height: 160vh;
-    background-position: center top;
-    background-size: 70% auto;
-    background-repeat: no-repeat;
-    top: 150vh; 
-    left: -35vw;
-    z-index: -1;
-    opacity: 0.8;
-    position: absolute;
-    transform: rotate(-0.6deg);
-  }
+    .image2 {
+        width: 170vw;
+        min-height: 160vh;
+        background-position: center top;
+        background-size: 70% auto;
+        background-repeat: no-repeat;
+        top: 150vh;
+        left: -35vw;
+        z-index: -1;
+        opacity: 0.8;
+        position: absolute;
+        transform: rotate(-0.6deg);
+    }
 
-  .main {
-    right: 0;
-    height: 35vh;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 2rem;
-  }
+    .main {
+        right: 0;
+        height: 35vh;
+        align-items: center;
+        justify-content: center;
+        margin-bottom: 2rem;
+    }
 
-  .main h1 {
-    font-size: 3.5rem;
-  }
+    .main h1 {
+        font-size: 3.5rem;
+    }
 
-  .main h1 span {
-    font-size: 3.5rem;
-  }
+    .main h1 span {
+        font-size: 3.5rem;
+    }
 
-  .main p {
-    font-size: 1rem;
-    margin-top: 0.5rem;
-  }
+    .main p {
+        font-size: 1rem;
+        margin-top: 0.5rem;
+    }
 
-  .card {
-    max-width: 85%;
-    padding: 1rem 1.25rem;
-    border-radius: 30px;
-  }
+    .card {
+        max-width: 85%;
+        padding: 1rem 1.25rem;
+        border-radius: 30px;
+    }
 
-  .card p {
-    font-size: 0.9rem;
-    line-height: 130%;
-  }
+    .card p {
+        font-size: 0.9rem;
+        line-height: 130%;
+    }
 
-  .card button {
-    padding: 0.75rem 2rem;
-    border-radius: 25px;
-    font-size: 1rem;
-  }
+    .card button {
+        padding: 0.75rem 2rem;
+        border-radius: 25px;
+        font-size: 1rem;
+    }
 }
-
 
 @media (width<=768px) {
-  .background {
-    min-height: 280vh;
-    width: 100%;
-    overflow-x: hidden;
-    position: absolute;
-  }
+    .background {
+        width: 100%;
+        height: 450vh;
+        overflow-x: hidden;
+        position: absolute;
+      }
+      .image1,
+      .image2 {
+          opacity: 0.75;
+          pointer-events: none; 
+      }
 
-  .image1 {
-    width: 180vw;
-    height: auto;
-    min-height: 160vh;
-    background-position: center top;
-    background-size: 100% auto;
-background-repeat: no-repeat;
-    background-repeat: no-repeat;
-    top: 60px;
-    left: -100px;
-    position: relative;
-    transform: rotate(-2.6deg);
-  }
-  
-  .image2 {
-    width: 120vw;
-    height: auto;
-    min-height: 100vh;
-    background-position: center top left;
-    background-size: 120% auto;
-    top: 150vh;
-    left:10vw;
-    z-index: -1;        
-}
+    .image1 {
+        width: 200vw;
+        height: auto;
+        min-height: 210vh;
+        background-position: center top;
+        background-size: 120% auto;
+        background-repeat: no-repeat;
+        top: -20px;
+        left: -160px;
+        position: relative;
 
-  .image1,.image2{
-    opacity: .75;
-  }
+      }
 
-  .main {
-    right: 0;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: nowrap;
-    height: 20vh;
-    margin-bottom: 4rem;
-  }
+    .image2 {
+        width: 160vw;
+        height: auto;
+        min-height: 140vh;
+        background-position: center top;
+        background-size: 140vw auto;
+        transform: scale(1.8);
+        left: -20vw;
+        top: 100%;
+        z-index: -1;
+        overflow: hidden;
+    }
 
-  .main h1 {
-    text-wrap-mode: nowrap;
-    font-size: 2.5rem;
-  }
 
-  .main h1 span {
-    font-size: 2.5rem;
-  }
+    .main {
+        right: 0;
+        align-items: center;
+        justify-content: center;
+        flex-wrap: nowrap;
+        height: 20vh;
+        margin-bottom: 4rem;
+    }
 
-  .textWrapper p {
-    text-wrap-mode: nowrap;
-    font-size: 0.6rem;
-    margin: 0 auto;
-  }
+    .main h1 {
+        text-wrap-mode: nowrap;
+        font-size: 2.5rem;
+    }
 
-  .card p {
-    font-weight: 400;
-    font-size: 10px;
-    line-height: 120%;
-    text-align: center;
-    vertical-align: middle;
-  }
-  .card {
-    padding: 0.75rem 1rem;
-    min-width: 80vw;
-    border-radius: 20px;
-    border-width: 1px;
-  }
+    .main h1 span {
+        font-size: 2.5rem;
+    }
 
-  .card button {
-    padding: 0.25rem 1.25rem;
-    border-radius: 20px;
-    font-size: small;
-  }
+    .textWrapper p {
+        text-wrap-mode: nowrap;
+        font-size: 0.6rem;
+        margin: 0 auto;
+    }
+
+    .card p {
+        font-weight: 400;
+        font-size: 10px;
+        line-height: 120%;
+        text-align: center;
+        vertical-align: middle;
+    }
+    .card {
+        padding: 0.75rem 1rem;
+        min-width: 80vw;
+        border-radius: 20px;
+        border-width: 1px;
+    }
+
+    .card button {
+        padding: 0.25rem 1.25rem;
+        border-radius: 20px;
+        font-size: small;
+    }
 }
