--- a/app/contact/contact.module.css
+++ b/app/contact/contact.module.css
@@ -2,7 +2,6 @@
 
 .header {
   background: linear-gradient(to bottom, #623a89, rgb(169, 113, 119), black);
-  gap: 30px;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -27,11 +26,17 @@
 
 .container {
   display: flex;
-  justify-content: space-between;
   padding: 2rem;
-  flex-wrap: wrap;
-  background: #000;
   color: white;
+}
+
+.formCardBox {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+  max-width: 1200px;
+  margin: auto;
 }
 
 .formContainer {
@@ -49,40 +54,58 @@
   font-size: 1.2rem;
 }
 
-.formGroup {
+.formCard {
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  padding: 2rem;
+  border-radius: 16px;
+  box-shadow: 0 0 20px rgba(177, 90, 255, 0.3);
+  max-width: 500px;
+  width: 100%;
+  color: white;
+}
+
+.formCard h2 {
+  margin-bottom: 1.5rem;
+  font-size: 1.2rem;
+}
+
+.row {
+  display: flex;
+  gap: 1rem;
+  flex-wrap: wrap;
+}
+
+.inputGroup {
+  flex: 1;
   display: flex;
   flex-direction: column;
   margin-bottom: 1rem;
 }
 
-.formGroup label {
-  margin-bottom: 0.5rem;
+.label {
   font-size: 0.9rem;
+  margin-bottom: 0.4rem;
 }
 
-.formGroup input,
-.formGroup textarea {
-  padding: 0.6rem;
-  border: none;
+.input,
+.textarea {
+  padding: 0.6rem 1rem;
+  border: 1px solid white;
   border-radius: 20px;
-  outline: none;
-  background-color: #1a1a1a;
+  background: transparent;
   color: white;
+  outline: none;
 }
 
 .textarea {
-  border-radius: 12px;
+  height: 120px;
+  border-radius: 16px;
   resize: none;
-  height: 100px;
-  padding: 0.6rem;
-  border: none;
-  background-color: #1a1a1a;
-  color: white;
-  outline: none;
 }
 
 .button {
-  margin-top: 1rem;
+  display: block;
+  margin: 1rem auto 0;
   padding: 0.7rem 2rem;
   border: none;
   border-radius: 20px;
@@ -100,7 +123,8 @@
 .contactInfo {
   flex: 1;
   min-width: 250px;
-  padding: 1rem;
+  margin: auto;
+  justify-items: center;
 }
 
 .contactInfo h3 {
@@ -115,7 +139,6 @@
 .map {
   margin-top: 1rem;
   border: 1px solid #555;
-  border-radius: 8px;
   overflow: hidden;
   width: 100%;
   height: auto;
@@ -131,7 +154,6 @@
 
   .formContainer,
   .contactInfo {
-    margin: 0;
     padding: 1.5rem 1rem;
   }
 
@@ -141,5 +163,18 @@
 
   .header h1 {
     font-size: 2rem;
+  }
+
+  .row {
+    flex-direction: column;
+  }
+
+  .formCardBox {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    max-width: 1200px;
+    margin: auto;
   }
 }
